# AutotraderUI

./: README.md  oanda.cfg  pyproject.toml
autotrader_ui/: 1_🏠_Home.py  data_utils.py  db_utils.py  indicators.py  market_info.py  results_analysis.py  tpqoa.py
autotrader_ui/pages/: 2_📈_Trends.py  2_🛰_Deployments.py  3_🕟_Backtesting.py  4_🕟_Backtesting.py  4_🧪_Experiments.py  5_🧪_Experiments.py
