[tool.poetry]
name = "autotrader_ui"
version = "1.0.0"
description = "Front-end of the AutoTrader framework."
authors = ["Ysael Desage <Ysael.Desage@me.com>"]
readme = "README.md"
packages = [{include = "autotrader_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
pandas = "^1.5.3"
streamlit = "^1.18.0"
v20 = "^3.0.25.0"
watchdog = "^2.2.1"
plotly = "^5.13.0"
configparser = "^5.3.0"
pandas-ta = "^0.3.14b0"
yfinance = "^0.2.9"
google-cloud-firestore = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
